--- a/ebuyfrontend/package.json
+++ b/ebuyfrontend/package.json
@@ -27,6 +27,7 @@
     "@angular/cli": "^19.0.3",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/webrtc": "^0.0.44",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
